crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q38_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q38"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: PageViews DESC NULLS FIRST, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |   Projection: hits.Title, count(*) AS PageViews                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |     Aggregate: groupBy=[[hits.Title]], aggr=[[count(Int64(1)) AS count(*)]]                                                                                                                                                                                                                                                                                                                                                                                              |
|               |       Projection: hits.Title                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |         BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |           Filter: hits.CounterID = Int32(62) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None) AND hits.DontCountHits = Int16(0) AND hits.IsRefresh = Int16(0) AND CAST(hits.Title AS Utf8) != Utf8("")                                                                                  |
|               |             TableScan: hits projection=[Title, EventDate, CounterID, IsRefresh, DontCountHits], partial_filters=[hits.CounterID = Int32(62), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None), hits.DontCountHits = Int16(0), hits.IsRefresh = Int16(0), CAST(hits.Title AS Utf8) != Utf8("")] |
| physical_plan | SortExec: TopK(fetch=10), expr=[PageViews@1 DESC], preserve_partitioning=[false]                                                                                                                                                                                                                                                                                                                                                                                         |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |     ProjectionExec: expr=[Title@0 as Title, count(*)@1 as PageViews]                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |       AggregateExec: mode=FinalPartitioned, gby=[Title@0 as Title], aggr=[count(*)]                                                                                                                                                                                                                                                                                                                                                                                      |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |           RepartitionExec: partitioning=Hash([Title@0], 24), input_partitions=24                                                                                                                                                                                                                                                                                                                                                                                         |
|               |             AggregateExec: mode=Partial, gby=[Title@0 as Title], aggr=[count(*)]                                                                                                                                                                                                                                                                                                                                                                                         |
|               |               ProjectionExec: expr=[Title@0 as Title]                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |                     FilterExec: CounterID@2 = 62 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) <= 1375228800000000000 AND DontCountHits@4 = 0 AND IsRefresh@3 = 0 AND CAST(Title@0 AS Utf8) !=                                                                                                                                                                                        |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                            |
|               |                           FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |                             CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |                               RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                      |
|               |                                 DuckSqlExec sql= SELECT "Title", "EventDate", "CounterID", "IsRefresh", "DontCountHits" FROM hits WHERE (CounterID = 62) AND (to_timestamp((CAST(EventDate AS BIGINT) * 86400)) >= CAST('2013-07-01 00:00:00' AS TIMESTAMP)) AND (to_timestamp((CAST(EventDate AS BIGINT) * 86400)) <= CAST('2013-07-31 00:00:00' AS TIMESTAMP)) AND (DontCountHits = 0) AND (IsRefresh = 0) AND (CAST(Title AS VARCHAR) <> '')                          |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
