crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q3_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q3"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                            |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[sum(CAST(hits.AdvEngineID AS Int64)), count(Int64(1)) AS count(*), avg(CAST(hits.ResolutionWidth AS Float64))]] |
|               |   BytesProcessedNode                                                                                                                            |
|               |     TableScan: hits projection=[ResolutionWidth, AdvEngineID]                                                                                   |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[sum(hits.AdvEngineID), count(*), avg(hits.ResolutionWidth)]                                            |
|               |   CoalescePartitionsExec                                                                                                                        |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[sum(hits.AdvEngineID), count(*), avg(hits.ResolutionWidth)]                                      |
|               |       BytesProcessedExec                                                                                                                        |
|               |         SchemaCastScanExec                                                                                                                      |
|               |           RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                 |
|               |             FallbackOnZeroResultsScanExec                                                                                                       |
|               |               CoalescePartitionsExec                                                                                                            |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                           |
|               |                   DuckSqlExec sql= SELECT "ResolutionWidth", "AdvEngineID" FROM hits                                                            |
|               |                                                                                                                                                 |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
