crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q4"
---
+---------------+---------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                  |
+---------------+---------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[avg(CAST(hits.UserID AS Float64))]]                   |
|               |   BytesProcessedNode                                                                  |
|               |     TableScan: hits projection=[UserID]                                               |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[avg(hits.UserID)]                            |
|               |   CoalescePartitionsExec                                                              |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[avg(hits.UserID)]                      |
|               |       BytesProcessedExec                                                              |
|               |         SchemaCastScanExec                                                            |
|               |           RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1       |
|               |             FallbackOnZeroResultsScanExec                                             |
|               |               CoalescePartitionsExec                                                  |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1 |
|               |                   DuckSqlExec sql= SELECT "UserID" FROM hits                          |
|               |                                                                                       |
+---------------+---------------------------------------------------------------------------------------+
